--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <title>My Portfolio</title>
 </head>
 <body>
+
     <!--NAV BAR-->
     <nav>
-        <div class="left"><a href="/">Mbiydzenyuy David WANTANGWA</a></div>
+        <div class="left"><a href="www.linkedin.com/in/mbiydzenyuy">Mbiydzenyuy David WANTANGWA</a></div>
         <div class="right">
             <a href="https://github.com/teamsmartworld" target="_blank" rel="noopener no-referrer"><i class="fa-brands fa-github"></i><span>Github</span></a>
         
@@ -32,7 +33,7 @@
         <!--SECTION One: Hero Section-->
         <section class="hero-section">
             <div class="text">
-                <h2>Hello! My Name is Mbiydzenyuy David WANTANGWA</h2>
+                <h2>Education And Work Experience</h2>
                 <p>I hold a Bachelor’s Degree in Philosophy and have pursued specialized training in IT support and computer maintenance, with a focus on networking, at Melton Communications in Yaoundé, Cameroon. I further advanced my technical expertise by becoming a certified VSAT Installer for GT&T, Signis, and AFSAT systems in Africa, and by completing coursework in Emergency Telecommunications. I have worked as an IT Support Technician and Network Technician for organizations such as Melton Communications, CNET-SIRD Cameroon, and Bambuiy Engineering Services and Techniques. Within the Swedish Civil Contingencies Agency (MSB), I have served as an ICT Specialist for the United Nations Office for the Coordination of Humanitarian Affairs (OCHA) in Mali, and as an IT Officer for the European Union Civil Protection Mechanism mission in Madagascar, supporting the Technical Assistance and Support Team (TAST). In recent years, I have focused on web design, particularly using the WordPress CMS, and have expanded my expertise to full-stack web development, cybersecurity, and Python programming. I possess strong skills in HTML & CSS, JavaScript, React, Node.js, and Python. I am actively enhancing my knowledge in cybersecurity and cloud computing, specifically with Microsoft Azure. For a comprehensive overview of my work and technical skills, please refer to my GitHub and LinkedIn profiles. </p>
 
                 <div class="links">
@@ -95,7 +96,7 @@
             <div class="group">
                 <div class="personal-details">
                     <img src="images/Burinyuy.jpg" alt="testimony person">
-                    <p>Mbiydzenyuy Courtney-Peal</p>
+                    <p>Mbiydzenyuy Courtney-Pearl</p>
                     <p>Information Technology Expert</p>
                 </div>
 
@@ -139,5 +140,8 @@
         </section>
 
     </main>
+    <footer>
+        Copyright  &#169  Mbiydzenyuy  David  WANTANGWA. Powered  by TeamSamrtWorld!        
+    </footer>
 </body>
 </html>
